--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socialapp",
+  "name": "blogapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "```mysql",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +12,14 @@
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.28.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NytWarrior/Social-App.git"
+  },
+  "bugs": {
+    "url": "https://github.com/NytWarrior/Social-App/issues"
+  },
+  "homepage": "https://github.com/NytWarrior/Social-App#readme"
 }
